--- a/style.css
+++ b/style.css
@@ -1,5 +1,15 @@
 body {
   background-color: rgb(253 , 251 , 251);
+
+}
+
+p {
+  font-family: monospace;
+  font-size: 15px;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 20px;
+  text-align: justify;
 }
 
 #tabela {
@@ -11,6 +21,11 @@ body {
 #licoes_aprendidas {
   line-height: 20px;
   font-family: fantasy;
+
+}
+
+#cores_li {
+  color: teal;
 }
 
 #rodape {
