--- a/style.css
+++ b/style.css
@@ -1,10 +1,15 @@
 body {
   background-color: rgb(253 , 251 , 251);
   margin-top: 150px;
+  font-family: Ubuntu, sans-serif;
 }
 
-#align-items{
-  align-items: center;
+table, th {
+  border: 1px solid black;
+}
+td{
+  border: 1px solid rgb(175, 175, 175);
+  background-color: rgb(118, 177, 126);
 }
 
 #aside {
@@ -30,6 +35,7 @@ body {
 
 #minha_foto {
   width: 8%;
+  float: left;
 }
 
 #rodape {
@@ -57,6 +63,7 @@ body {
   display: inline-block;
   text-align: center;
   padding: 20px;
+  float: left;
 }
 
 .lado-dir {
