--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header h3 {
     margin-top: 30px;
 }
 #minha_foto {
-    max-width: 200px;
+    width: 30%;
     border-radius: 200px;
     padding: 30px;
     margin-top: 100px;
@@ -57,28 +57,24 @@ header h3 {
 .container-container{
     margin-bottom: 50px;
 }
-
-.container-text {
-    width: 70%;
-    display: inline-block;
-    text-align: center;
-    margin-top: 50px;
+#div-aside {
+    margin-top: 20px;
 }
-#sobre-aprender {
-    max-width: 50%;
-    width: 60%;
-    text-align: center;
-    display: block;
-    margin-top: 30px;
-    margin-bottom: 30px;
+#nossa-rotina {
+    margin-bottom: 0;
+    width: 600px;
+    float: left;
 }
-p {
-    font-size: 20px;
-}
-.aside-lateral{
+.decoration {
+    text-decoration: underline purple;
     text-align: center;
 }
-
+#aside {
+    width: 25%;
+    border-radius: 50px;
+    text-align: center;
+    margin-left: 150px;
+}
 #rodape {
     text-align: center;
     background-color: rgb(25, 29, 43);
