--- a/style.css
+++ b/style.css
@@ -5,31 +5,64 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: "Patrick Hand", cursive;
+ font-family: "Patrick Hand", cursive;
 }
 
 /* Class styles */
 
 .lessons {
-    width: 70%;
-    margin: auto;
+ width: 70%;
+ margin: auto;
 }
 
 .lado-esquerdo {
-    float: left;
+ float: left;
 }
 
 .lado-direito {
-    float: right;
+ float: right;
 }
 
 .sem-float {
-    clear: both;
+ clear: both;
+}
+
+.footer-content-wrapper {
+    position: relative;
+    display: inline-block;
+    vertical-align: middle;
+    overflow: auto;
+    min-height: 50px;
+    height: 100%;
+    width: 45%;
+    padding-left: 5%;
+    font-family: "Satisfy", cursive;
+    color: rgb(25, 63, 123);
+    font-size: 25px;
+}
+
+.right-footer-content {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+}
+
+.social-media-icon {
+    height: 25px;
+    margin-right: 10px;
+}
+
+.vertical-centralizer {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 /* ID styles */
 #cabecalho {
-  background-color: rgba(126, 201, 251, 0.918);
+  background-color: rgba(126, 201, 251 , 0.918);
   position: fixed;
   right: 0;
   left: 0;
@@ -38,7 +71,7 @@ body {
   min-height: 70px;
   margin-left: auto;
   margin-right: auto;
-  border: 10px outset rgba(126, 201, 251, 0.918);
+  border: 10px outset rgba(126, 201, 251 , 0.918);
 }
 
 #titulo {
@@ -50,14 +83,15 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
-  font-size: 70px;
+  font-size: 50px;
   font-family: "Satisfy", cursive;
   color: rgb(25, 63, 124);
 }
 
 #minha_foto {
-  width: 300px;
-  top: 100px;
+  height: 100%;
+  right: 5%;
+  border-radius: 25%;
 }
 
 #licoes_aprendidas {
@@ -69,12 +103,25 @@ body {
 }
 
 #rodape {
-  background-color: rgb(9 , 145 , 236);
-  display: block;
-  width: 100%;
-  height: 100px;
-  font-family: "Satisfy", cursive;
-  clear: both;
+    background-color: rgba(126, 201, 251 , 0.918);
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    width: 75%;
+    height: 10%;
+    min-height: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    border: 10px outset rgba(126, 201, 251 , 0.918);
 }
 
 /* Inherit styles */
+
+#rodape a:link, a:visited {
+    color: rgb(25, 63, 124);
+}
+
+#rodape a:hover {
+    background-color: rgba(0, 152, 253, 0.692);
+}
