--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: Arial, sans-serif;
-  font-size: 20px;
+  font-size: 15px;
   line-height: 2em;
   padding: 10px;
 }
@@ -15,24 +15,51 @@ body {
   text-align: center;
 }
 
+caption {
+    border: 4px solid grey;
+}
+
+footer {
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+}
+
 .lado-direito {
   float: right;
-  width: 30%;
+  width: 35%;
+  border: 2px dashed gray;
+  padding: 2px;
 }
 
 .lado-esquerdo {
   float: left;
-  width: 70%;
+  width: 60%;
+  border: 1px solid grey;
+  margin-bottom: 5%;
+}
+
+#links_importantes {
+    text-align: center;
 }
 
 #minha_foto {
   width: 150px;
-  padding-top: 200px;
+  margin-top: 7%;
   margin-left: 50%;
+  border: 2px solid goldenrod;
+
 }
 
 table {
-  width: 100%;
-  margin: 10px 10px 20px 30px;
-  background-color: burlywood;
+  table-layout: auto;
+  width: 80%;
+  border: 4px solid gray;
+  padding: 5px;
+  margin-bottom: 5%;
+  margin-left: 10%;
+}
+
+td {
+    border: 1px solid black;
 }
