--- a/style.css
+++ b/style.css
@@ -5,14 +5,13 @@
 
 body {
   background-color: rgb(253 , 251 , 251);
- font-family: "Patrick Hand", cursive;
+  font-family: Patrick Hand, cursive;
 }
 
 /* Class styles */
-
 .lessons {
- width: 70%;
- margin: auto;
+  width: 70%;
+  margin: auto;
 }
 
 .lado-esquerdo {
@@ -28,36 +27,36 @@ body {
 }
 
 .footer-content-wrapper {
-    position: relative;
-    display: inline-block;
-    vertical-align: middle;
-    overflow: auto;
-    min-height: 50px;
-    height: 100%;
-    width: 45%;
-    padding-left: 5%;
-    font-family: "Satisfy", cursive;
-    color: rgb(25, 63, 123);
-    font-size: 25px;
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  overflow: auto;
+  min-height: 50px;
+  height: 100%;
+  width: 45%;
+  padding-left: 5%;
+  font-family: Satisfy, cursive;
+  color: rgb(25, 63, 123);
+  font-size: 25px;
 }
 
 .right-footer-content {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translateY(-50%);
-    text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
 }
 
 .social-media-icon {
-    height: 25px;
-    margin-right: 10px;
+  height: 25px;
+  margin-right: 10px;
 }
 
 .vertical-centralizer {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /* ID styles */
@@ -84,8 +83,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   font-size: 50px;
-  font-family: "Satisfy", cursive;
-  color: rgb(25, 63, 124);
+  font-family: Satisfy, cursive;
+  color: rgb(25 , 63 , 124);
 }
 
 #minha_foto {
@@ -103,25 +102,24 @@ body {
 }
 
 #rodape {
-    background-color: rgba(126, 201, 251 , 0.918);
-    position: fixed;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    width: 75%;
-    height: 10%;
-    min-height: 50px;
-    margin-left: auto;
-    margin-right: auto;
-    border: 10px outset rgba(126, 201, 251 , 0.918);
+  background-color: rgba(126 , 201 , 251 , 0.918);
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 75%;
+  height: 10%;
+  min-height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 10px outset rgba(126 , 201 , 251 , 0.918);
 }
 
 /* Inherit styles */
-
-#rodape a:link, a:visited {
+#rodape a:link , a:visited {
     color: rgb(25, 63, 124);
 }
 
 #rodape a:hover {
-    background-color: rgba(0, 152, 253, 0.692);
+    background-color: rgba(0 , 152 , 253 , 0.692);
 }
