--- a/style.css
+++ b/style.css
@@ -1,16 +1,29 @@
+* {
+  max-width: 100%;
+  margin: 0%;
+  padding: 0%;
+}
+
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: Segoe UI, Tahoma, Geneva, Verdana, sans-serif;
   font-size: 18px;
   line-height: 30px;
-  margin: 10px 10px;
-  padding: 10px;
+  margin: 5px 5px;
+  padding: 5px;
   color: rgb(37 , 37 , 37);
 }
 
 header {
   background-color: darkcyan;
   width: 100%;
+  padding-top: 30px;
+  margin-left: -9px;
+}
+
+#cabecalho {
+  position: fixed;
+  top: 0px;
 }
 
 h1 {
@@ -20,10 +33,13 @@ h1 {
 }
 
 li a {
+  display: inline-block;
   background-color: darkcyan;
   color: antiquewhite;
   text-decoration: none;
-  padding: 15px;
+  padding: 10px;
+  margin-left: 100px;
+  margin-bottom: 5px;
 }
 
 a:hover {
@@ -40,48 +56,106 @@ a:hover {
 .aprendidas {
   display: block;
   float: left;
-  width: 40%;
+  width: 20%;
   padding: 10px 30px;
+  margin-top: 35px;
+  margin-left: 15%;
 }
 
 .aprender {
   display: block;
   float: right;
-  width: 50%;
+  width: 20%;
   padding: 10px 30px;
+  margin-top: 35px;
+  margin-right: 10%;
 }
 
-#cabecalho {
-  position: fixed;
-  top: 0px;
+.aprendidas h2, .aprender h2 {
+  margin-bottom: 15px;
 }
 
 .lado-esquerdo {
   float: left;
-  max-width: 65%;
+  max-width: 60%;
   padding: 10px;
-  border: 3px solid black;
+  margin-top: 35px;
+  margin-left: 50px;
+  text-indent: 20px;
 }
 
 .lado-direito {
   float: right;
-  max-width: 30%;
+  max-width: 350px;
   padding: 10px;
-  border: 3px solid black;
+  border: 3px solid rgb(153, 153, 153);
+  margin-bottom: 35px;
+  margin-right: 15px;
+  margin-top: 35px;
+  background-color: rgb(235, 231, 231);
 }
 
-.artigo {
+.artigo p{
   padding: 10px 30px;
+  background-color:rgb(253 , 251 , 251);
+  text-align: justify;
+  text-indent: 20px;
+  padding-top: 10px;
+}
+
+.artigo h2 {
+  padding-bottom: 15px;
+  text-align: center;
+  color: rgb(73, 73, 73);
+}
+
+#table {
+  max-width: 400px;
+  min-width: 300px;
+  display: inline-block;
+  margin-bottom: 35px;
+  border: 3px solid rgb(153, 153, 153);
+  padding: 15px;
+}
+
+#table h2 {
+  margin-bottom: 15px;
+}
+
+section#table {
+  background-color: rgb(235, 231, 231);
+  float:right;
+  margin-right: 15px;
+}
+
+#table tr, #table td, #table th{
+  background-color: rgb(12, 145, 145);
+  line-height: 50px;
+  padding: 5px  25px;
+  border: 3px solid rgb(153, 153, 153);
+  text-align: center;
+  color: antiquewhite;
+  text-align: left;
 }
 
 footer {
   background-color: rgb(8, 124, 124);
   width: 100%;
   clear: both;
+  margin-left: -9px;
+  padding-right: 19px;
+  margin-bottom: -8px;
+  padding-top: 35px;
+  padding-bottom: 15px;
+  text-align: center;
 }
 
 .link {
   color: antiquewhite;
   text-decoration: none;
-  margin-bottom: 20px;
+}
+
+#big-section {
+  display: flex;
+  margin-top: 50px;
 }
