--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   background-color: rgb(253 , 251 , 251);
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Courier, monospace;
   font-size: 18px;
 }
 
