--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ p{
 .url_icone {
     text-align: center;
     color: black;
-    font-weight: bolder;
+    font-weight: 600;
 }
 
 #cabecalho {
     margin: auto;
-    background: rgb(15,163,107);
+    background: rgb(15, 163, 107);
     position: fixed;
     top: 0px;
     right: 0px;
@@ -35,7 +35,7 @@ p{
     display: inline-block;
     padding-left: 15px;
     padding-right: 10px;
-    font-weight: bolder;
+    font-weight: 600;
     color: rgb(253, 251, 251);
 }
 
@@ -79,9 +79,9 @@ p{
 }
 
 #listas {
-    font-size:14px;
+    font-size: 14px;
     line-height: 13px;
-    font-weight: bolder;
+    font-weight: 600;
     margin-top: 120px;
 }
 
@@ -129,7 +129,7 @@ p{
     margin: 10px 10% 100px 10%;
 }
 #rodape {
-    background: rgb(15,163,107);
+    background: rgb(15, 163, 107);
     margin: auto;
     color: rgb(253, 251, 251);
     position: fixed;
