--- a/style.css
+++ b/style.css
@@ -53,12 +53,10 @@ ul {
 }
 
 #hero-card {
-  position: relative;
   width: 375px;
   height: 385px;
   margin-top: 250px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 50px;
   border-radius: 20px;
   background-color: rgb(66 , 66 , 66);
   box-shadow: 20px 15px 10px rgb(56 , 56 , 56);
@@ -66,10 +64,20 @@ ul {
 
 #minha_foto {
   position: absolute;
-  left: 110px;
+  left: 160px;
   bottom: 310px;
   width: 150px;
   border: 4px solid rgb(1 , 223 , 215);
   border-radius: 100px;
   z-index: 1000;
+}
+
+#licoes_aprendidas {
+  border: 1px solid red;
+  float: right;
+  width: 320px;
+  margin-top: -360px;
+  margin-right: 400px;
+  padding: 25px;
+  border-radius: 15px;
 }
