--- a/style.css
+++ b/style.css
@@ -17,12 +17,13 @@ p {
 .main-content {
     position: absolute;
     top: 17%;
+    bottom: 12%;
     left: 0;
     right: 0;
     width: 65%;
     margin-left: auto;
     margin-right: auto;
-    padding: 1% 3%;
+    padding: 1.5% 3%;
     overflow: auto;
 }
 
