--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
   background-color: rgb(253 , 251 , 251);
+  margin: 0px;
 }
 #cabecalho {
   background-color: rgb(89 , 238 , 43);
+  position: fixed;
+  width: 100%;
+  text-align: center;
 }
 #titulo {
   color: brown;
+
 }
