--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ body {
 }
 
 header {
-    width: 100%;
-    height: 15vh;
-    position: fixed;
-    background-color: #008388;
+        width: 100%;
+        height: 15vh;
+        position: fixed;
+        background-color: rgb(22,75,80);
 }
 
 #titulo {
@@ -34,7 +34,7 @@ main {
     height: 100vh;
 }
 
-main img{
+main img {
     margin-top: 140px;
     margin-bottom: 40px;
     margin-left: 60px;
@@ -63,7 +63,7 @@ main img{
 }
 
 footer {
-    background-color: #008388;
+    background-color: rgb(22,75,80);
     width: 100%;
     height: 10vh;
 }
