--- a/style.css
+++ b/style.css
@@ -2,23 +2,29 @@
     margin: 0;
     padding: 0;
     border: 0;
+    list-style: none;
+    text-decoration: none;
 }
 
 body {
     background-color: rgb(253, 251, 251);
+    font-family: sans-serif;
+    max-width:100%;
+    overflow-x: hidden;
 }
 
 header {
-        width: 100%;
-        height: 15vh;
-        position: fixed;
-        background-color: rgb(22,75,80);
+    width: 100%;
+    height: 15vh;
+    position: fixed;
+    background-color: rgb(22,75,80);
 }
 
 #titulo {
     width: 600px;
     height: 50px;
     margin-left: 50px;
+    color: rgb(253,251,251);
 }
 
 .navegacao {
@@ -62,8 +68,15 @@ main img {
     margin-bottom: 50px;
 }
 
+.tabela{
+    width: 70px;
+    height: 70px;
+    color: rgb(0,0,0);
+}
+
 footer {
     background-color: rgb(22,75,80);
     width: 100%;
     height: 10vh;
+    color: rgb(253,251,251);
 }
