--- a/style.css
+++ b/style.css
@@ -2,13 +2,15 @@ body {
   background-color: rgb(253 , 251 , 251);
   margin: 0px;
 }
-#cabecalho {
+#cabecalho{
   background-color: rgb(89 , 238 , 43);
   position: fixed;
   width: 100%;
   text-align: center;
 }
-#titulo {
+#titulo{
   color: brown;
-
+}
+#minha_foto{
+  margin-top: 85px;
 }
