--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
   padding: 3px;
   background-color: rgb(10, 126, 81);
   color: white;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: Arial, sans-serif;
 }
 
 #rodape a {
