--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-*{
-  box-sizing: border-box;
-}
-
 body {
   background-color: rgb(253 , 251 , 251);
   font-family: Arial, Helvetica, sans-serif;
@@ -12,36 +8,36 @@ body {
 #cabecalho {
   position: fixed;
   top: 0;
-  color: rgb(59, 134, 134);
-  background-color:rgb(168, 219, 168);
+  color: rgb(59, 134 , 134);
+  background-color: rgb(168, 219 , 168);
   width: 100%;
   padding: 10px;
   font-size: 20px;
 }
 
 #minha_foto {
- border-radius: 50%;
- width: 150px;
- float: right;
+  border-radius: 50%;
+  width: 150px;
+  float: right;
 }
 
-#conteudo_extra{
+#conteudo_extra {
   width: 20%;
-  padding: 10px 10px;
+  padding: 10px;
   text-align: center;
 }
 
-.lista_licoes{
+.lista_licoes {
   display: inline-block;
   margin: 0 10px;
 }
 
-main{
+main {
   width: 80%;
-  padding: 10px 10px; 
+  padding: 10px; 
 }
 
-footer{
+footer {
   width: 100%;
   padding: 10px 10px;
   background-color: rgb(241, 241 , 231);
