--- a/style.css
+++ b/style.css
@@ -2,8 +2,10 @@ body{
     background-color: rgb(253, 251, 251);
     font-family: 'Merriweather', Georgia, serif;
 }
-
 #cabecalho{
+    top:0px
+}
+#barra{
     position: fixed;
     background-color: rgb(222, 184, 135);
     width: 100%;
@@ -48,20 +50,19 @@ a:hover{
 .menusuperior{
     display:inline;
 }
-#esquerda{
-    float:right;
-}
-#direita{
-    float:left;
-}
+
 footer{
     background-color: rgb(222, 184, 135);
     width: 100%;
     text-align: center;
-    color:white;
-    position: relative;
+    color: LightGoldenRodYellow;
 }
 li a{
-    color: white;
+    color: LightGoldenRodYellow;
     font-size: x-large;
+}
+
+table, th, td{
+    border: 4px solid red;
+
 }
