--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ nav {
 header {
   position: fixed;
   top: 0;
+  padding-top: 30px;
 }
 
 #titulo {
@@ -32,9 +33,8 @@ header {
 
 ul {
   text-align: center;
-  display: inline;
+  padding-top: 30px;
   margin-left: 520px;
-  border: 1px solid red;
 }
 
 #nav-btn li {
@@ -64,6 +64,25 @@ ul {
 
 #hero-card p {
   text-align: center;
+  padding-top: 150px;
+  font-size: 30px;
+  font-family: Oxanium, cursive;
+  text-transform: uppercase;
+  color: rgb(46 , 254 , 247);
+}
+
+#card-links {
+  margin-top: 30px;
+}
+
+ul {
+  margin-left: 30px;
+  margin-right: 80px;
+}
+
+#card-list li {
+  display: inline;
+  margin-left: 50px;
 }
 
 #minha_foto {
@@ -77,7 +96,7 @@ ul {
 }
 
 #licoes_aprendidas {
-  border: 1px solid red;
+  
   float: right;
   width: 320px;
   margin-top: -360px;
@@ -89,7 +108,7 @@ ul {
 }
 
 #licoes_a_aprender {
-  border: 1px solid red;
+ 
   float: right;
   width: 320px;
   margin-top: -360px;
