Corrigindo issues do Code Climate

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ table td {
   padding: 2.5rem;
   text-align: center;
   background-color: rgb(40, 40, 40);
-  color: rgb(138,138,138);
+  color: rgb(138, 138, 138);
   font: 1.2rem monospace italic small-caps 800;
   line-height: 1;
   display: flex;
