--- a/style.css
+++ b/style.css
@@ -46,21 +46,25 @@ main img {
     margin-left: 60px;
 }
 
-.listas {
+.lista-desordenada {
     width: 100%;
     height: 40vh;
     margin-left: 100px;
-    margin-bottom: 60px;
+    margin-bottom: 200px;
 }
 
 .lista-ordenada {
     margin-bottom: 30px;
+    width: 100%;
+    margin-left: 100px;
+    margin-bottom: 60px;
+    
 }
 
 .artigo {
     width: 100%;
     height: 50vh;
-    margin-top: 170px;
+    margin-top: 300px;
     margin-left: 50px;
 }
 
@@ -72,6 +76,7 @@ main img {
     width: 70px;
     height: 70px;
     color: rgb( 1 , 2 , 1 );
+    margin-left: 50px;
 }
 
 footer {
