--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@ body {
 }
 
 h2 {
-  font-family: verdana;
+  font-family: verdana, sans-serif;
+  font-weight: 700;
   font-size: 24px;
 }
 
@@ -47,6 +48,7 @@ h2 {
   position: relative;
   float: left;
   margin-left: 30px;
+  margin-bottom: 40px;
   width: 50%;
   text-align: justify;
 }
@@ -54,7 +56,7 @@ h2 {
 #aside {
   position: relative;
   float: right;
-  margin-right: 65px;
+  margin-right: 115px;
   margin-bottom: 40px;
   width: 35%;
   padding: 10px;
