--- a/style.css
+++ b/style.css
@@ -49,15 +49,16 @@ main img {
 .lista-desordenada {
     width: 100%;
     height: 40vh;
-    margin-left: 100px;
     margin-bottom: 200px;
+    list-style-type: disc;
+    text-align: center;
 }
 
 .lista-ordenada {
     margin-bottom: 30px;
     width: 100%;
-    margin-left: 100px;
     margin-bottom: 60px;
+    text-align: center;
     
 }
 
@@ -89,6 +90,18 @@ footer {
     line-height: 2rem;
 }
 
+footer p {
+    margin-left: 15px;
+}
+
+footer i {
+    margin-left: 15px;
+}
+
 a {
     color: white;
+}
+
+h3 {
+    text-align: center;
 }
