--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body {
 h2 {
   font-family: verdana, sans-serif;
   font-weight: 700;
+  line-height: 1.2;
   font-size: 24px;
+  color: rgb(64 , 61 , 57);
 }
 
 #cabecalho {
@@ -46,17 +48,11 @@ h2 {
 
 #artigo {
   float: left;
-  margin-left: 30px;
-  margin-bottom: 40px;
-  width: 50%;
   text-align: justify;
 }
 
 #aside {
   float: right;
-  margin-right: 115px;
-  margin-bottom: 40px;
-  width: 35%;
   padding: 10px;
   text-align: justify;
   border: 1px solid rgb(235 , 94 , 40);
