--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ aside {
 
 table, th, td {
   border: 1px solid black;
-  margin: 10px 30px 30px;
+  margin: 20px 30px 30px;
   border-collapse: collapse;
 }
 
@@ -59,4 +59,14 @@ th, td {
   width: 200px;
   display: inline-block;
   border-radius: 40%;
+}
+
+#aprendizado {
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 20px;
+}
+
+#rodape {
+  margin: 10;
 }
