--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header {
 
 main {
     width: 100%;
-    height: 100vh;
+    height: 25vh;
 }
 
 main img {
@@ -46,26 +46,31 @@ main img {
     margin-left: 60px;
 }
 
+.listas {
+    width: 100%;
+    height: 70vh;
+}
+
 .lista-desordenada {
     width: 100%;
-    height: 40vh;
+    height: 30vh;
     margin-bottom: 200px;
     list-style-type: disc;
-    text-align: center;
+    margin-left: 670px;
 }
 
 .lista-ordenada {
     margin-bottom: 30px;
     width: 100%;
     margin-bottom: 60px;
-    text-align: center;
+    margin-left: 670px;
     
 }
 
 .artigo {
     width: 100%;
     height: 50vh;
-    margin-top: 300px;
+    margin-top: 100px;
     margin-left: 50px;
 }
 
